# aws-greengrass-labs-lookoutvision-gstreamer

./: CMakeLists.txt  README.md  THIRD-PARTY-LICENSES  build.sh  gdk-config.json  recipe.json
.github/workflows/: CI.yml
gst/lookoutvision/: gstlookoutvision.cc  gstlookoutvision.h
gst/lookoutvisionmeta/: gstlookoutvisionmeta.h  gstlookoutvisionresult.h
lookoutvision-client/: LookoutVisionInferenceClient.cc  LookoutVisionInferenceClient.h
mqtt-publish-sample/: README.md
mqtt-publish-sample/gstreamer-pipeline/recipe/: aws.greengrass.labs.GStreamerPipeline-1.0.0.json
mqtt-publish-sample/mqttpublisher-gstreamer-plugin/: CMakeLists.txt
mqtt-publish-sample/mqttpublisher-gstreamer-plugin/greengrass-client/: GreengrassClient.cc  GreengrassClient.h
mqtt-publish-sample/mqttpublisher-gstreamer-plugin/mqttpublisher/: gstmqttpublisher.cc  gstmqttpublisher.h
mqtt-publish-sample/mqttpublisher-gstreamer-plugin/recipe/: aws.greengrass.labs.mqttpublisher.GStreamer-1.0.0.json
recipe/: aws.greengrass.labs.lookoutvision.GStreamer-1.0.0.json
src/gst/lookoutvision/: gstlookoutvision.cc  gstlookoutvision.h
src/gst/lookoutvisionmeta/: gstlookoutvisionmeta.cc  gstlookoutvisionmeta.h  gstlookoutvisionresult.h
src/lookoutvision-client/: Inference.proto  LookoutVisionInferenceClient.cc  LookoutVisionInferenceClient.h
tst/: CMakeLists.txt
tst/gst/lookoutvision/: gstlookoutvisiontest.cc
tst/gst/lookoutvisionmeta/: gstlookoutvisionmetatest.cc
tst/lookoutvision-client/: LookoutVisionInferenceClientTest.cc
tst/utils/inferenceconsumer/: gstinferenceconsumer.cc  gstinferenceconsumer.h
tst/utils/test-server/: TestServer.cc  TestServer.h
